# nl-mgo-dvp-proxy

./: .gitignore  .gitmodules  CONTRIBUTING.md  Earthfile  Makefile  README.md  docker-compose.yml  pki_overview.json
services/proxy/: .codespellignore  .coveragerc  .gitignore  .safety-policy.yml  HOSTING_CHANGELOG.md  METRICS.md  Makefile  README.md  app.conf.example  app.conf.test  pyproject.toml  sonar-project.properties  tach.toml  version.json
services/proxy/app/: bindings.py  constants.py  exception_handlers.py  main.py  seeders.py  utils.py
services/proxy/app/authentication/: adapters.py  constants.py  exceptions.py  interfaces.py  middleware.py  middlewares.py  models.py  responses.py  router.py  schemas.py  services.py  validation.py
services/proxy/app/circuitbreaker/: models.py  repositories.py  services.py
services/proxy/app/cli/: main.py
services/proxy/app/config/: models.py  services.py
services/proxy/app/forwarding/: client.py  constants.py  events.py  factories.py  middleware.py  models.py  router.py  schemas.py  services.py
services/proxy/app/forwarding/signing/: exceptions.py  services.py
services/proxy/app/http_client/: clients.py  constants.py  factories.py
services/proxy/app/medmij/: commands.py  exceptions.py  repositories.py  services.py
services/proxy/app/medmij_logging/: constants.py  enums.py  factories.py  listeners.py  schemas.py  services.py
services/proxy/app/metrics/: clients.py  enums.py  models.py  service.py
services/proxy/app/observer/: services.py
services/proxy/app/oidc/: clients.py  constants.py  repositories.py  router.py  schemas.py  services.py
services/proxy/app/security/: enums.py  exceptions.py  repositories.py  services.py  utils.py
services/proxy/app/security/dva_target/: exceptions.py  middlewares.py  services.py
services/proxy/app/telemetry/: jaeger_provider.py
services/proxy/app/version/: models.py  router.py
services/proxy/docker/: Dockerfile  entrypoint.sh
services/proxy/docs/architecture/oauth/: flow.txt
services/proxy/docs/architecture/oidc-using-vad/: vad-sequence-diagram.md
services/proxy/resources/medmij/: MedMij_Whitelist.xsd
services/proxy/tests/: conftest.py  utils.py
services/proxy/tests/app/: test_bindings.py  test_exception_handlers.py  test_main.py  test_utils.py
services/proxy/tests/app/authentication/: test_adapters.py  test_models.py  test_oauth_flow.py  test_router.py  test_services.py
services/proxy/tests/app/circuitbreaker/: test_binding.py  test_models.py  test_repositories.py  test_services.py
services/proxy/tests/app/cli/: test_main.py
services/proxy/tests/app/config/: test_models.py  test_services.py
services/proxy/tests/app/docs/: test_router.py
services/proxy/tests/app/forwarding/: test_client.py  test_factories.py  test_middleware.py  test_request.py  test_router.py  test_services.py  test_services_logging.py  test_sync_client.py
services/proxy/tests/app/http_client/: test_factories.py
services/proxy/tests/app/medmij/: test_cli.py  test_repositories.py  test_services.py
services/proxy/tests/app/medmij_logging/: test_factories.py  test_listeners.py  test_schemas.py  test_services.py
services/proxy/tests/app/metrics/: test_models.py  test_service.py
services/proxy/tests/app/observer/: test_services.py
services/proxy/tests/app/oidc/: test_clients.py  test_repositories.py  test_router.py  test_services.py
services/proxy/tests/app/security/: test_in_memory_key_store_repository.key  test_repositories.py  test_services.py  test_utils.py
services/proxy/tests/feature/: test_forward_media_resource_request.py  test_medmij_pull_whitelist.py
services/proxy/tests/fixtures/: test_fixtures.py
services/proxy/tools/: generate-client-assertion-jwt-key-pair.py  generate-key-pair.py  generate-oidc-state-secret.py  generate_oauth_state_signing_key.py
(+21 files in other folders)
