[project]
name = "proxy"
version = "0.0.0"
description = "Proxy between Client SDK and DVA (Dienstverlener Aanbieder)."
requires-python = ">=3.11,<3.12"
dependencies = [
    "uvicorn>=0.38,<0.42",
    "fastapi>=0.125,<0.130",
    "requests>=2.32,<3",
    "statsd>=4.0,<5",
    "cryptography>=46.0,<47",
    "inject>=5.3,<6",
    "httpx>=0.28,<0.29",
    "opentelemetry-instrumentation-fastapi==0.60b1",
    "opentelemetry-exporter-otlp>=1.27.0,<2",
    "opentelemetry-api>=1.27.0,<2",
    "opentelemetry-sdk>=1.27.0,<2",
    "redis>=5.3.1,<6",
    "jwcrypto>=1.5.6,<2",
    "python-json-logger>=4.0.0,<5",
    "async-timeout>=5.0.1,<6",
    "mgo-healthchecker[redis]",
]

[dependency-groups]
dev = [
    "pytest>=9.0,<10",
    "pytest-cov>=7.0,<8",
    "pytest-mock>=3.15,<4",
    "pytest-asyncio>=1.2,<2",
    "ruff>=0.14,<0.15",
    "codespell>=2.4.1,<3",
    "types-requests>=2.32.4.20260107,<3",
    "faker>=40.1,<41",
    "freezegun>=1.5.5,<2",
    "mypy>=1.19.1",
    "types-jwcrypto>=1.5.0.20251102",
    "pre-commit",
    "pre-commit-uv",
    "tach>=0.34.0,<1.0.0",
]

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = false

[tool.uv.sources]
mgo-healthchecker = { git = "ssh://git@github.com/minvws/nl-mgo-package-healthchecker-private.git", tag = "v0.1.0" }

[tool.ruff]
cache-dir = "~/.cache/ruff"
include = [
    "pyproject.toml",
    "app/*.py",
    "tests/*.py",
]

[tool.ruff.lint]
select = ["TID251", "TID252", "F401"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"unittest".msg = "use pytest-mock instead"

[tool.mypy]
files = "app,tests"
python_version = "3.11"
strict = true
cache_dir = "~/.cache/mypy"

[[tool.mypy.overrides]]
module = "statsd"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jwcrypto"
ignore_missing_imports = true

[tool.pytest.ini_options]
cache_dir = "~/.cache/pytest"
testpaths = [
    "tests",
]

[tool.codespell]
skip = [
    "./certs/*",
    "./secrets/*",
    "./static/*.js"
]
